# project_esk_fastapi_py

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: models.py
app/migrations/versions/: 094c5039a82c_add_products_table.py  2249d4536ffd_add_users_table.py  b00872445629_add_categories_table.py
app/routes/: category_routes.py  deps.py  poc.py  product_routes.py  user_routes.py
app/schemas/: category.py  product.py  user.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_product_routes.py  test_user_routes.py  test_user_schema.py
app/test/schemas/: test_product_schema.py
app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_user_usecases.py
app/use_cases/: category_use_cases.py  poc.py  product_use_cases.py  user_use_cases.py
