[tool.poetry]
name = "projeto2"
version = "0.1.0"
description = ""
authors = ["eskokado <eskokado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.11"
psycopg2-binary = "^2.9.6"
pytest = "^7.3.1"
alembic = "^1.10.4"
python-decouple = "^3.8"
httpx = "^0.24.0"
ipdb = "^0.13.13"


[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
